<resources>
    <string name="app_name">Centung Mobile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string-array name="gender_array">
        <item>Pilih Jenis Kelamin</item>
        <item>laki-laki</item>
        <item>perempuan</item>
    </string-array>
    <string name="title_news">News</string>
    <string name="text_app_name_spaced">Centung\nMobile</string>
    <string name="text_bangkit_capstone">Bangkit Capstone</string>
    <string name="text_log_in">Log In</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_desc_login_illustration">Login illustration</string>
    <string name="text_sub_headline_login">Login Your Account to start Application</string>
    <string name="text_sub_headline_register">Register Your Account to start Application</string>
    <string name="text_headline_login">Welcome to</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_profile">Profile</string>
</resources>