<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_headline_1"
            style="@style/Headline.Semibold.Black"
            android:layout_width="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="38.5dp"
            android:text="@string/text_headline_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_headline_2"
            style="@style/Headline.Semibold.Black"
            android:layout_width="match_parent"
            android:layout_marginStart="15dp"
            android:text="@string/app_name"
            app:layout_constraintTop_toBottomOf="@id/tv_headline_1" />

        <TextView
            android:id="@+id/tv_sub_headline_1"
            style="@style/Sub.Headline.Regular.Grey.2"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/text_sub_headline_login"
            app:layout_constraintStart_toStartOf="@id/tv_headline_1"
            app:layout_constraintTop_toBottomOf="@id/tv_headline_2" />

        <ImageView
            android:id="@+id/iv_login"
            android:layout_width="0dp"
            android:layout_height="188dp"
            android:layout_marginTop="38.5dp"
            android:contentDescription="@string/text_desc_login_illustration"
            android:src="@drawable/img_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sub_headline_1" />

        <com.capstone.centung.utils.components.CustomEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintText="Input your email"
            app:labelText="Email"
            app:layout_constraintTop_toBottomOf="@id/iv_login" />

        <com.capstone.centung.utils.components.CustomEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:hintText="Input your password"
            app:isPasswordTypeInput="true"
            app:labelText="Password"
            app:layout_constraintTop_toBottomOf="@id/edt_email" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Button.Rounded.Medium.Blue"
            android:layout_width="match_parent"
            android:layout_marginTop="35dp"
            android:text="Sign In"
            app:layout_constraintTop_toBottomOf="@id/edt_password" />

        <TextView
            android:id="@+id/tv_sub_headline"
            style="@style/Body.Light.1"
            android:layout_marginTop="130dp"
            android:layout_marginBottom="20dp"
            android:text="Don't have an account ? "
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_btn_register"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <TextView
            android:id="@+id/tv_btn_register"
            style="@style/Body.Light.2"
            android:layout_marginStart="4dp"
            android:text="Sign Up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_sub_headline"
            app:layout_constraintTop_toTopOf="@id/tv_sub_headline" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>